--- a/index.html
+++ b/index.html
@@ -143,10 +143,18 @@
            </div> 
             <div class="col-sm-12 col-lg-6">
             <!--form for newsletter-->
+                <form>
+                  <fieldset>
+                      <legend> <span>Get In Touch</span></legend>
+                      <label for="email">Email</label>
+                      <input type="text" name="email" id="email">
+                </fieldset>
+              </form>
+                    
             </div>
         </div>
     </div>
-    <!--<div>-->
+    <div>
         <div id="map-responsive"><!--map-->
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2795.8642938570606!2d-122.68304824912053!3d45.51281037899896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54950a111b946cd5%3A0x77d900bd19b3085b!2s457%20SW%20Market%20St%2C%20Portland%2C%20OR%2097201!5e0!3m2!1sen!2sus!4v1574626030298!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
@@ -174,10 +182,21 @@
               <header>
                   <h2> Get In Touch</h2>
               </header>
-              <!--forms-->
+              <form>
+                <legend> <span>Get in Touch </span></legend>
+                      <ol>
+                          <li><label for="firstlast"> Name:</label>
+                              <input type="text" name="name" id="firstlast">
+                          </li>
+                          <li><label for="emailadd">Email:</label>
+                              <input type="text" name="email" id="emailadd">
+                          </li>
+                          <li> <textarea name="comment" rows="4" cols="45" placeholder="Leave us a comment"></textarea>
+                          </li>
+                      </ol>
+                </form>
           </section>
       </div>
-    <!--</div>-->
     <footer> <!--bg black-->
         <div class="wrapper row">
           <div class="col-sm-12 col-lg-2">
