--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header> <!--bg img-->
         <div class="wrapper row">
             <div class="col-sm-2">
-                <img src=" " alt=""> <!--logo-->
+                <img src="img/logo-TwinFinch.png" alt=""> <!--logo-->
             </div>
             <div class="col-lg-10">
                 <img id="hamb-nav" src="https://via.placeholder.com/100" alt="navigation">
@@ -41,8 +41,8 @@
             <h2> Our Products</h2> <!--caps and underlined-->
         </header>
         <section class="col-sm-12 col-lg-6"> <!--col-sm-12 col-md-6-->
-            <div> 
-                <!--img-->
+            <div class="img-responsive"> 
+                <img src="img/packaging.png" alt=""><!--img-->
             </div>
             <div>
               <header>
@@ -55,8 +55,8 @@
             </div>
         </section> 
         <section class="col-sm-12 col-lg-6"> <!--col-sm-12 col-md-6-->
-            <div> 
-                <!--img-->
+            <div class="img-responsive"> 
+                <img src="img/packaging.png" alt=""><!--img-->
             </div>
             <div>
               <header>
@@ -69,8 +69,8 @@
             </div>
         </section> 
         <section class="col-sm-12 col-lg-4"> <!--col-sm-12 col-md-6-->
-            <div> 
-                <!--img-->
+            <div class="img-responsive"> 
+                <img src="img/packaging.png" alt=""><!--img-->
             </div>
             <div>
               <header>
@@ -83,8 +83,8 @@
             </div>
         </section> 
         <section class="col-sm-12 col-lg-4"> <!--col-sm-12 col-md-6-->
-            <div> 
-                <!--img-->
+            <div class="img-responsive"> 
+                <img src="img/packaging.png" alt=""><!--img-->
             </div>
             <div>
               <header>
@@ -97,8 +97,8 @@
             </div>
         </section> 
         <section class="col-sm-12 col-lg-4"> <!--col-sm-12 col-md-6-->
-            <div> 
-                <!--img-->
+            <div class="img-responsive"> 
+                <img src="img/packaging.png" alt=""><!--img-->
             </div>
             <div>
               <header>
@@ -183,6 +183,7 @@
                   <h2> Get In Touch</h2>
               </header>
               <form>
+                  <fieldset>
                 <legend> <span>Get in Touch </span></legend>
                       <ol>
                           <li><label for="firstlast"> Name:</label>
@@ -194,13 +195,15 @@
                           <li> <textarea name="comment" rows="4" cols="45" placeholder="Leave us a comment"></textarea>
                           </li>
                       </ol>
+                  </fieldset>
                 </form>
           </section>
       </div>
+    </div>
     <footer> <!--bg black-->
         <div class="wrapper row">
           <div class="col-sm-12 col-lg-2">
-              <!--img-->
+              <img src="img/logo-TwinFinch.png" alt=""><!--img-->
           </div>
           <div class="col-sm-12 col-lg-10">
               <nav>
@@ -214,9 +217,9 @@
               </nav>
               <p> Follow Us</p>
               <ul><!--sprites-->
-                  <li><a> Facebook</a></li>
-                  <li><a> Twitter</a></li>
-                  <li><a> Instagram</a></li>
+                  <li><a href="https://www.facebook.com" target="_blank"> Facebook</a></li>
+                  <li><a href="https://www.twitter.com" target="_blank"> Twitter</a></li>
+                  <li><a href="https://www.instagram.com" target="_blank"> Instagram</a></li>
 
               </ul>
           </div>
