--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <h2> Our Products</h2> <!--caps and underlined-->
         </header>
         <section class="col-sm-12 col-lg-6"> <!--col-sm-12 col-md-6-->
-            <div class="img-responsive"> 
-                <img src="img/packaging.png" alt=""><!--img-->
+            <div> 
+                <img src="img/packaging.png" alt="" class="img-responsive" data-rjs="2"><!--img-->
             </div>
             <div>
               <header>
@@ -55,8 +55,8 @@
             </div>
         </section> 
         <section class="col-sm-12 col-lg-6"> <!--col-sm-12 col-md-6-->
-            <div class="img-responsive"> 
-                <img src="img/packaging.png" alt=""><!--img-->
+            <div> 
+                <img src="img/packaging.png" alt="" class="img-responsive" data-rjs="2"><!--img-->
             </div>
             <div>
               <header>
@@ -69,8 +69,8 @@
             </div>
         </section> 
         <section class="col-sm-12 col-lg-4"> <!--col-sm-12 col-md-6-->
-            <div class="img-responsive"> 
-                <img src="img/packaging.png" alt=""><!--img-->
+            <div> 
+                <img src="img/packaging.png" alt="" class="img-responsive" data-rjs="2"><!--img-->
             </div>
             <div>
               <header>
@@ -83,8 +83,8 @@
             </div>
         </section> 
         <section class="col-sm-12 col-lg-4"> <!--col-sm-12 col-md-6-->
-            <div class="img-responsive"> 
-                <img src="img/packaging.png" alt=""><!--img-->
+            <div> 
+                <img src="img/packaging.png" alt="" class="img-responsive" data-rjs="2"><!--img-->
             </div>
             <div>
               <header>
@@ -97,8 +97,8 @@
             </div>
         </section> 
         <section class="col-sm-12 col-lg-4"> <!--col-sm-12 col-md-6-->
-            <div class="img-responsive"> 
-                <img src="img/packaging.png" alt=""><!--img-->
+            <div> 
+                <img src="img/packaging.png" alt="" class="img-responsive" data-rjs="2"><!--img-->
             </div>
             <div>
               <header>
@@ -155,8 +155,8 @@
         </div>
     </div>
     <div>
-        <div id="map-responsive"><!--map-->
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2795.8642938570606!2d-122.68304824912053!3d45.51281037899896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54950a111b946cd5%3A0x77d900bd19b3085b!2s457%20SW%20Market%20St%2C%20Portland%2C%20OR%2097201!5e0!3m2!1sen!2sus!4v1574626030298!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        <div id="map-responsive"><!--map--> <!--find a map that works AND VALIDATES-->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2795.8642938570606!2d-122.68304824912053!3d45.51281037899896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54950a111b946cd5%3A0x77d900bd19b3085b!2s457%20SW%20Market%20St%2C%20Portland%2C%20OR%2097201!5e0!3m2!1sen!2sus!4v1574626030298!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen=""></iframe>
         </div>
         <div class="wrapper row">
           <section class="col-sm-12 col-lg-6">
