--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <header class="col-sm-12">
             <h2> Our Products</h2> <!--caps and underlined-->
         </header>
-        <section class="col-sm-12 col-lg-6"> <!--col-sm-12 col-md-6-->
+        <section class="col-sm-12 col-md-6 col-lg-6"> <!--col-sm-12 col-md-6-->
             <div> 
                 <img src="img/packaging.png" alt="" class="img-responsive" data-rjs="2"><!--img-->
             </div>
@@ -54,7 +54,7 @@
                 <p><a href="">Buy Now</a></p> <!--all caps-->
             </div>
         </section> 
-        <section class="col-sm-12 col-lg-6"> <!--col-sm-12 col-md-6-->
+        <section class="col-sm-12 col-md-6 col-lg-6"> <!--col-sm-12 col-md-6-->
             <div> 
                 <img src="img/packaging.png" alt="" class="img-responsive" data-rjs="2"><!--img-->
             </div>
@@ -68,7 +68,7 @@
                 <p><a href="">Buy Now</a></p> <!--all caps-->
             </div>
         </section> 
-        <section class="col-sm-12 col-lg-4"> <!--col-sm-12 col-md-6-->
+        <section class="col-sm-12 col-md-4 col-lg-4"> <!--col-sm-12 col-md-6-->
             <div> 
                 <img src="img/packaging.png" alt="" class="img-responsive" data-rjs="2"><!--img-->
             </div>
@@ -82,7 +82,7 @@
                 <p><a href="">Buy Now</a></p> <!--all caps-->
             </div>
         </section> 
-        <section class="col-sm-12 col-lg-4"> <!--col-sm-12 col-md-6-->
+        <section class="col-sm-12 col-md-4 col-lg-4"> <!--col-sm-12 col-md-6-->
             <div> 
                 <img src="img/packaging.png" alt="" class="img-responsive" data-rjs="2"><!--img-->
             </div>
@@ -96,7 +96,7 @@
                 <p><a href="">Buy Now</a></p> <!--all caps-->
             </div>
         </section> 
-        <section class="col-sm-12 col-lg-4"> <!--col-sm-12 col-md-6-->
+        <section class="col-sm-12 col-md-4 col-lg-4"> <!--col-sm-12 col-md-6-->
             <div> 
                 <img src="img/packaging.png" alt="" class="img-responsive" data-rjs="2"><!--img-->
             </div>
@@ -120,15 +120,15 @@
     </div>
     <div> <!--bg black-->
         <section class="wrapper row" id="process">
-            <div class="col-sm-12 col-lg-4">
+            <div class="col-sm-12 col-md-4 col-lg-4">
               <header>
                   <h2> Our Process </h2>
               </header>
             </div>
-            <div class="col-sm-12 col-lg-4"> 
+            <div class="col-sm-12 col-md-4 col-lg-4"> 
                 <p>We have a constantly evolving, hand picked selection of fine coffee origins and delicious blends engineered to help you brew a cafe-quality cup at home. Our coffee is roasted in a hot air, refractory lined roaster with an extraordinary level of control.  Most small coffee roasters use a single stage burner which offers virtually no control during the roasting process.  </p>
             </div>
-            <div class="col-sm-12 col-lg-4">
+            <div class="col-sm-12 col-md-4 col-lg-4">
               <p> The significance of relying on a high volume of hot air to roast coffee beans can’t be understated.  The refractory significantly reduces hot spots which can damage coffee beans and produces a much more even roasting environment.</p>
               <p> Learn more about brewing </p>
               <p> <a href="http://www.google.com" target="_blank"> Read More</a></p>
@@ -137,11 +137,11 @@
     </div>
     <div> <!--bg-gray-->
         <div class="wrapper row">
-            <div class=" col-sm-12 col-lg-6">
+            <div class=" col-sm-12 col-md-6  col-lg-6">
                 <p> Newsletter</p>
                 <p> Sign up for our newsletter, and we'll keep you updated on everything happening at Twin Finch!</p>
            </div> 
-            <div class="col-sm-12 col-lg-6">
+            <div class="col-sm-12 col-md-6  col-lg-6">
             <!--form for newsletter-->
                 <form>
                   <fieldset>
@@ -159,7 +159,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2795.8642938570606!2d-122.68304824912053!3d45.51281037899896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54950a111b946cd5%3A0x77d900bd19b3085b!2s457%20SW%20Market%20St%2C%20Portland%2C%20OR%2097201!5e0!3m2!1sen!2sus!4v1574626030298!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen=""></iframe>
         </div>
         <div class="wrapper row">
-          <section class="col-sm-12 col-lg-6">
+          <section class="col-sm-12 col-md-6  col-lg-6">
               <header>
                   <h2> Our Locations</h2>
               </header>
@@ -169,7 +169,7 @@
     </div>
     <div><!--bg gray-->
       <div class="wrapper row">
-          <section class="col-sm-12 col-lg-6" id="shopping">
+          <section class="col-sm-12 col-md-6  col-lg-6" id="shopping">
               <header>
                   <h2> Online Shopping</h2>
               </header>
@@ -178,7 +178,7 @@
               <p> Products</p>
               <p> Our featured coffees are roasted on a limited basis;<br>your orders could be held until the next time the batch hits the roaster</p>
           </section>
-          <section class="col-sm-12 col-lg-6" id="contact">
+          <section class="col-sm-12 col-md-6 col-lg-6" id="contact">
               <header>
                   <h2> Get In Touch</h2>
               </header>
@@ -202,10 +202,10 @@
     </div>
     <footer> <!--bg black-->
         <div class="wrapper row">
-          <div class="col-sm-12 col-lg-2">
+          <div class="col-sm-12 col-md-2 col-lg-2">
               <img src="img/logo-TwinFinch.png" alt=""><!--img-->
           </div>
-          <div class="col-sm-12 col-lg-10">
+          <div class="col-sm-12 col-md-10 col-lg-10">
               <nav>
                   <ul>
                       <li> <a href=""> Home </a></li>
@@ -215,14 +215,16 @@
                       <li> <a href=""> Contact </a></li>
                   </ul>
               </nav>
-              <p> Follow Us</p>
-              <ul><!--sprites-->
-                  <li><a href="https://www.facebook.com" target="_blank"> Facebook</a></li>
-                  <li><a href="https://www.twitter.com" target="_blank"> Twitter</a></li>
-                  <li><a href="https://www.instagram.com" target="_blank"> Instagram</a></li>
+            </div>
+            <div class="col-sm-12 col-md-10 col-lg-10">
+                  <p> Follow Us</p>
+                  <ul><!--sprites-->
+                      <li><a href="https://www.facebook.com" target="_blank"> Facebook</a></li>
+                      <li><a href="https://www.twitter.com" target="_blank"> Twitter</a></li>
+                      <li><a href="https://www.instagram.com" target="_blank"> Instagram</a></li>
 
-              </ul>
-          </div>
+                  </ul>
+            </div>
         </div>
     </footer>
     
