typography and buttons
fixing type sizing and button sizing

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
         </div>
         <div class="wrapper">
-            <div class="col-sm-12 col-lg-4">
+            <div class="col-sm-12 col-md-4">
                 <h1> Twin Finch Roastery is an authentic micro-roastery; small, dedicated, and highly focused on quality. </h1>
             </div>
         </div>
@@ -56,7 +56,7 @@
               <header>
                   <h3> Evening Oak</h3>
               </header>
-                <p> Medium-Dark $19.95</p>
+                <p> <b>Medium-Dark $19.95</b></p>
                 <p>Pungently rich and complex with hints of night-blooming flowers and coriander in aroma and a cup. </p>
                 <p> Eastern Java, Indonesia </p>
                 <p><a href="https://www.shopify.com" target="_blank" class="btn-yellow">Buy Now</a></p> <!--all caps-->
@@ -70,7 +70,7 @@
               <header>
                   <h3> Finch House Blend</h3>
               </header>
-                <p> Medium $17.95</p>
+                <p> <b>Medium $17.95</b></p>
                 <p>Hint of citrus, complemented by flavors of dark chocolate, peanut, and light pepper notes. </p>
                 <p> Cajamarca &amp; Moyobamba Regions, Peru  </p>
                 <p><a href="https://www.shopify.com" target="_blank" class="btn-yellow">Buy Now</a></p> <!--all caps-->
@@ -84,7 +84,7 @@
               <header>
                   <h3> Sunrise </h3>
               </header>
-                <p> Light $17.95</p>
+                <p> <b>Light $17.95</b></p>
                 <p>Light, fruity acidity which complements its fully nutty body and unique spicy tones.</p>
                 <p> La Chiapas, Mexico </p>
                 <p><a href="https://www.shopify.com" target="_blank" class="btn-yellow" >Buy Now</a></p> <!--all caps-->
@@ -98,7 +98,7 @@
               <header>
                   <h3> Midnight </h3>
               </header>
-                <p> Dark $17.95</p>
+                <p> <b>Dark $17.95</b></p>
                 <p>Roasted into second crack for big, bold, and dark cup. Beans display oil.</p>
                 <p> Latin America</p>
                 <p><a href="https://www.shopify.com" target="_blank" class="btn-yellow">Buy Now</a></p> <!--all caps-->
@@ -112,7 +112,7 @@
               <header>
                   <h3> Espresso </h3>
               </header>
-                <p> $19.95</p>
+                <p> <b>$19.95</b></p>
                 <p>Clean, a little toasty, sumptuous cream, unfussy, delicious.</p>
                 <p> Latin America, Africa, Indonesia </p>
                 <p><a href="https://www.shopify.com" target="_blank" class="btn-yellow">Buy Now</a></p> <!--all caps-->
@@ -121,12 +121,12 @@
     </section>
     </div>    
     <div class="bg-yellow"> <!--bg yellow-->
-        <div class="wrapper row">
+        <blockquote class="wrapper row">
           <div class="col-sm-12" id="center"> <!--center align-->
               <p>“This extraordinary coffee almost defies description with its aromatic complexity while retaining a classic clarity of structure.” </p>
              <footer> - Coffee Review </footer>
           </div>
-        </div>
+        </blockquote>
     </div>
     <div class="bg-black"> <!--bg black-->
         <section class="wrapper row" id="process">
@@ -193,11 +193,12 @@
                   <h2> Get In Touch</h2>
               </header>
               <form>
-                     <p><label for="firstlast"> Name:</label>
-                              <input type="text" name="name" id="firstlast"></p>
-                    <p><label for="emailadd">Email:</label>
-                              <input type="email" name="email" id="emailadd"></p>
-                    <p><textarea name="comment" rows="4" cols="45" placeholder="Leave us a comment"></textarea></p>
+                     <p><label for="firstlast"> Name</label></p>
+                              <input type="text" name="name" id="firstlast">
+                    <p><label for="emailadd">Email</label></p>
+                              <input type="email" name="email" id="emailadd">
+                    <p>Comments</p>
+                  <textarea name="comment" rows="4" cols="45" placeholder="Leave us a comment"></textarea>
                   <p><input type="submit" class="btn-yellow"></p>
                 </form>
           </section>
