--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
             </header>
         </div>
         <section class="col-sm-12 col-md-6"> <!--col-sm-12 col-md-6-->
-            <div> 
                 <img src="img/twin-finch-packaging.png" alt="" class="img-responsive" data-rjs="2"><!--img-->
-            </div>
             <div>
               <header>
                   <h3> Evening Oak</h3>
@@ -63,9 +61,7 @@
             </div>
         </section> 
         <section class="col-sm-12 col-md-6"> <!--col-sm-12 col-md-6-->
-            <div> 
                 <img src="img/twin-finch-packaging.png" alt="" class="img-responsive" data-rjs="2"><!--img-->
-            </div>
             <div>
               <header>
                   <h3> Finch House Blend</h3>
@@ -77,9 +73,7 @@
             </div>
         </section> 
         <section class="col-sm-12 col-md-4"> <!--col-sm-12 col-md-6-->
-            <div> 
                 <img src="img/twin-finch-packaging.png" alt="" class="img-responsive" data-rjs="2"><!--img-->
-            </div>
             <div>
               <header>
                   <h3> Sunrise </h3>
@@ -91,9 +85,7 @@
             </div>
         </section> 
         <section class="col-sm-12 col-md-4 "> <!--col-sm-12 col-md-6-->
-            <div> 
                 <img src="img/twin-finch-packaging.png" alt="" class="img-responsive" data-rjs="2"><!--img-->
-            </div>
             <div>
               <header>
                   <h3> Midnight </h3>
@@ -105,9 +97,7 @@
             </div>
         </section> 
         <div class="col-sm-12 col-md-4 "> <!--col-sm-12 col-md-6-->
-            <div> 
                 <img src="img/twin-finch-packaging.png" alt="" class="img-responsive" data-rjs="2"><!--img-->
-            </div>
             <section>
               <header>
                   <h3> Espresso </h3>
@@ -124,7 +114,7 @@
         <blockquote class="wrapper row">
           <div class="col-sm-12" id="center"> <!--center align-->
               <p>“This extraordinary coffee almost defies description with its aromatic complexity while retaining a classic clarity of structure.” </p>
-             <footer> - Coffee Review </footer>
+              <footer> - <a href="https://www.coffeereview.com" target="_blank">Coffee Review </a> </footer>
           </div>
         </blockquote>
     </div>
@@ -151,16 +141,15 @@
                 <p> Newsletter</p>
                 <p> Sign up for our newsletter, and we'll keep you updated on everything happening at Twin Finch!</p>
            </div> 
-            <div class="col-sm-12 col-md-6">
+
             <!--form for newsletter-->
-                <form>
+                <form class="col-sm-12 col-md-6">
                       <p><label for="email">Email</label></p>
                       <input type="text" name="email" id="email"> 
                     <input type="submit" class="btn-yellow">
               </form>
               
                     
-            </div>
         </div>
     </div>
     <div id="map-location">
@@ -207,10 +196,9 @@
     <footer class="bg-black"> <!--bg black-->
         <div class="wrapper row">
           <div class="col-sm-12 col-md-2">
-              <img src="img/logo-TwinFinch.png" alt="" data-rjs="2"><!--img-->
+              <a href="#"><img src="img/logo-TwinFinch.png" alt="" data-rjs="2"></a><!--img-->
           </div>
-          <div class="col-sm-12 col-md-10">
-              <nav>
+              <nav class="col-sm-12 col-md-10">
                   <ul>
                       <li> <a href="#"> Home </a></li>
                       <li> <a href="#products"> Product </a></li>
@@ -219,7 +207,6 @@
                       <li> <a href="#contact"> Contact </a></li>
                   </ul>
               </nav>
-            </div>
             <div class="col-sm-12 col-md-10">
                   <p> Follow Us</p> <!--display inline block-->
                   <ul><!--sprites-->
