--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header> <!--bg img-->
         <div class="wrapper row">
             <div class="col-sm-2">
-                <img src="img/logo-TwinFinch.png" alt="" data-rjs="2"> <!--logo-->
+                <img src="img/logo-TwinFinch.png" alt="TwinFinchRoastery" data-rjs="2"> <!--logo-->
             </div>
             <div class="col-lg-10"><!--col sm class-->
                 <img id="hamb-nav" src="https://via.placeholder.com/100" alt="navigation">
@@ -35,7 +35,7 @@
                 </nav>
             </div>
         </div>
-        <div class="wrapper">
+        <div class="wrapper row">
             <div class="col-sm-12 col-md-4">
                 <h1> Twin Finch Roastery is an authentic micro-roastery; small, dedicated, and highly focused on quality. </h1>
             </div>
@@ -196,7 +196,7 @@
     <footer class="bg-black"> <!--bg black-->
         <div class="wrapper row">
           <div class="col-sm-12 col-md-2">
-              <a href="#"><img src="img/logo-TwinFinch.png" alt="" data-rjs="2"></a><!--img-->
+              <a href="#"><img src="img/logo-TwinFinch.png" alt="TwinFinchRoastery" data-rjs="2"></a><!--img-->
           </div>
               <nav class="col-sm-12 col-md-10">
                   <ul>
